# boe-mcp

./: .gitignore  .mcp.json  CLAUDE.md  pyproject.toml
.github/workflows/: ci.yml
BOE_MCP_Testing/: 00_MASTER_INDEX.md  01_PLAN_PRUEBAS.md  CHECKPOINT_LATEST.md  ESTRUCTURA_CREADA.md  README_Nivel_1.md  RESUMEN_EJECUTIVO.md
BOE_MCP_Testing/.checkpoints/: CHECKPOINT_LATEST.md  CHECKPOINT_NIVEL_2.md  CHECKPOINT_NIVEL_3.md  CHECKPOINT_NIVEL_4.md  CHECKPOINT_NIVEL_5.md  CHECKPOINT_NIVEL_6.md
BOE_MCP_Testing/Datos_Capturados/Hallazgos/: HALLAZGO_001_Sumarios_Extensos.md
BOE_MCP_Testing/Datos_Capturados/Metadatos_Cache/: BOE-A-2015-10566_metadatos.xml  BOE-A-2015-10566_search.json
BOE_MCP_Testing/Nivel_1_Funcionalidad_Basica/: INFORME_NIVEL_1.md
BOE_MCP_Testing/Nivel_1_Funcionalidad_Basica/Test_1.1_Verificar_Herramientas/: 00_metadata.json  01_request.json  02_response_raw.json  03_response_parsed.md  04_evaluation.md
BOE_MCP_Testing/Nivel_1_Funcionalidad_Basica/Test_1.2_Busqueda_Simple/: 00_metadata.json  01_request.json  (+3 more)
BOE_MCP_Testing/Nivel_2_Busqueda_Filtrado/: INFORME_NIVEL_2.md
BOE_MCP_Testing/Nivel_3_Navegacion_Estructura/: INFORME_NIVEL_3.md
BOE_MCP_Testing/Nivel_4_Datos_Referencia/: INFORME_NIVEL_4.md
BOE_MCP_Testing/Nivel_5_Casos_Uso_Reales/: INFORME_NIVEL_6.md  PLAN_CASOS_USO.md
BOE_MCP_Testing/Nivel_5_Sumarios_Publicaciones/: INFORME_NIVEL_5.md
docs/: ARQUITECTURA-PRODUCCION-BOE.md  BOE_MCP_DEVELOPMENT_FRAMEWORK.md  CASOS-USO-SMART-NAV-V2.md  CATALOGO-HERRAMIENTAS-BOE-MCP.md  DISEÑO-GET-ARTICLE-MODIFICATIONS.md  GUIA-USO-HERRAMIENTAS.md  INFORME-CASOS-USO.md  INVESTIGACION-MCP-GUIAS-USO.md  LIMITACIONES-CONOCIDAS.md  PATCH-PASOS-1-2-v1.6.0.patch  PLAN-RPVEA-2.0-smart-navigation-v2.md  PLAN-SMART-SUMMARY.md  PLAN-V1.6.0-OPTIMIZACIONES.md  PLAN-v2.0-navegacion-inteligente.md  README.md  RPVEA-2.0-BOE-MCP.md  TEST_COMPARATIVO_VERSIONES.md  v1.1.0_ACCEPTANCE_CRITERIA.md  v1.2.0_PLAN_RPVEA.md
docs/testing/: README.md  TC-CC-11.4_limits_analysis.md  TC-REG-01-02_regression_analysis.md  test-TC-CC-11.4A-v120.md
src/boe_mcp/: server.py
tests/: generar_informe_casos_uso.py  results_limits_v120.json  results_regression_v120.json  test_casos_uso_smart_nav.py  test_e2e_smart_navigation.py  test_e2e_smart_summary.py  test_get_article_info.py  test_get_law_index.py  test_get_law_structure_summary.py  test_limits_v120.py  test_regression_v120.py  test_search_in_law.py  test_v110_validation.py  test_v3_e2e.py  test_validators.py  test_validators_articles.py
(+50 files in other folders)
